add new updates and configs

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,2 +1,52 @@
 ---
 # dnsmasq::parameter_name: 'value'
+  dnsmasq::auth_sec_servers: undef
+  dnsmasq::auth_server: undef
+  dnsmasq::auth_ttl: undef
+  dnsmasq::auth_zone: undef
+  dnsmasq::bogus_priv: true
+  dnsmasq::cache_size: 1000
+  dnsmasq::configs_hash: {}
+  dnsmasq::dhcp_boot: undef
+  dnsmasq::dhcp_leasefile: undef
+  dnsmasq::dhcp_no_override: false
+  dnsmasq::domain: undef
+  dnsmasq::domain_needed: true
+  dnsmasq::dns_forward_max: undef
+  dnsmasq::config_dir: 'etc/dnsmasq.d'
+  dnsmasq::logdir: '/var/log'
+  dnsmasq::package_ensure: present
+  dnsmasq::package_manage: true
+  dnsmasq::package_name: 'dnsmasq'
+  dnsmasq::enable_tftp: false
+  dnsmasq::expand_hosts: true
+  dnsmasq::interface: undef
+  dnsmasq::listen_address: undef
+  dnsmasq::local_ttl: undef
+  dnsmasq::manage_tftp_root: false
+  dnsmasq::max_ttl: undef
+  dnsmasq::max_cache_ttl: undef
+  dnsmasq::neg_ttl: undef
+  dnsmasq::no_dhcp_interface: undef
+  dnsmasw::$hosts_hash: {}
+  dnsmasq::$dhcp_hosts_hash: {}
+  dnsmasq::no_hosts: false
+  dnsmasq::no_negcache: false
+  dnsmasq::no_resolv: false
+  dnsmasq::port: '53'
+  dnsmasq::read_ethers: false
+  dnsmasq::reload_resolvconf: true
+  dnsmasq::resolv_file: false
+  dnsmasq::restart: true
+  dnsmasq::run_as_user: undef
+  dnsmasq::save_config_file: true
+  dnsmasq::config_file: /etc/dnsmasq.conf'
+  dnsmasq::resolv_file: '/etc/resolv.conf.dnsmasq'
+  dnsmasq::service_enable: true
+  dnsmasq::service_ensure: 'running'
+  dnsmasq::service_name: 'dnsmasq'
+  dnsmasq::strict_order: true
+  dnsmasq::tftp_root: '/var/lib/tftpboot'
+  dnsmasq::bogus_ip: '1.2.3.4'
+  dnsmasq::bogus_tld: {}
+  dnsmasq::template: 'dnsmasq/dnsmasq.conf.epp'
